[package]
name = "flo-grpc"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.6"
prost-types = "0.6"
bytes = "0.4.12"
tonic =  "0.3.0"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.3.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }